# doodad

./: ADT.hs  AST.hs  Args.hs  CHANGELOG.md  Cmp.hs  CmpADT.hs  CmpAST.hs  CmpBuilder.hs  CmpFuncs.hs  CmpMonad.hs  CmpState.hs  CmpTable.hs  CmpVal.hs  CmpValue.hs  Compile.hs  Compiler.hs  Dockerfile  Error.hs  Flatten.hs  Funcs.hs  JIT.hs  LICENSE  Lexer.hs  Lexer.x  Main.hs  Makefile  Modules.hs  Modules2.hs  Monad.hs  Parser.hs  Parser.y  Pointer.hs  Print.hs  Print2.hs  Prototyper.hs  README.md  Resolver.hs  State.hs  SymTab.hs  Table.hs  (+25 more)
.github/workflows/: docker-publish.yml
blobs/: blobs.doo
bootstrap/lexer/: chars.ll  io.ll  lexer.ll  lexerMain.ll  strings.ll
builtin/: all.doo  arithemtic.doo  array.doo  assert.doo  boolean.doo  builtin.doo  compare.doo  container.doo  convert.doo  destroy.doo  for.doo  limits.doo  slice.doo  store.doo  sum.doo  table.doo  tuple.doo
compiler/: ADT.hs  AST.hs  ASTMapper.hs  ASTResolved.hs  Annotate.hs  Apply.hs  Args.hs  Array.hs  Builtin.hs  Collect.hs  Compile.hs  Construct.hs  Error.hs  Flatten.hs  Funcs.hs  IR.hs  IRGen.hs  Infer.hs  Interop.hs  JIT.hs  Lexer.x  Main.hs  Modules.hs  Monad.hs  Parser.hs  Parser.y  Print.hs  Resolve.hs  Sparse.hs  State.hs  States.hs  SymTab.hs  Symbol.hs  Table.hs  Trace.hs  Tuple.hs  TupleDeleter.hs  Type.hs  TypeMatcher.hs  Typeof.hs  (+3 more)
compiler/stage0-parseAST/: LexemeReader.hs  Lexer.hs  Lexer.x  Parser.y  Token.hs  lexer.c  lexer.h
compiler/stage0-parseAST/lexer/: assert.c  io.c  lexer.c  lexer.h  old_lexer.c  strings.c
compiler/stage1-macroExpansion/: AstBuilder.hs  InstBuilder.hs  Preprocess.hs
compiler/stage1-preprocess/: AstBuilder.hs  Preprocess.hs
compiler/stage1-resolveSymbols/: CombineAsts.hs  Resolve.hs  Resolve2.hs  ResolveAst.hs
compiler/stage2-resolveSymbols/: CombineAsts.hs  InferTypes.hs  ResolveAst.hs
compiler/stage2-typeInference/: Annotate.hs  Apply.hs  CleanUp.hs  Collect.hs  Constraint.hs  DeAnnotate.hs  FunctionFinder.hs  FunctionInstantiator.hs  Infer.hs  TypeConstraints.hs  Unify.hs
compiler/stage2b-resolveFuncs/: Resolve2.hs
compiler/stage3-checker/: Checker.hs
compiler/stage3-funcInstantiation/: Instantiator.hs
compiler/stage3-generateC/: CAst.hs  CBuilder.hs  CGenerate.hs  COptimise.hs  CPretty.hs  Compile.hs
compiler/stage3-generateIR/: IRGen.hs
compiler/stage3-generateMidLevelIr/: FindFunc.hs  Ir.hs  Ir2.hs  IrContextCallPass.hs  IrContextHeaderPass.hs  IrContextPass.hs  IrGenerate.hs  IrGenerateDestroy.hs
compiler/stage3-typeInference/: Annotate.hs  Apply.hs  Collect.hs  Constraint.hs  FeatureFinder.hs  FunctionFinder.hs  FunctionInstantiator.hs  Infer.hs  Unify.hs
compiler/stage4-generateC/: Builtin.hs  CAst.hs  CBuilder.hs  CGenerate.hs  COptimise.hs  CPretty.hs  Compile.hs
compiler/stage4-generateLLVM/: ADT.hs  Array.hs  Builtin.hs  Compile.hs  Funcs.hs  Map.hs  Print.hs  Sparse.hs  State.hs  Table.hs  Tuple.hs  Typeof.hs  Value.hs
compiler/stage4-midLevelIR/: AddFuncDestroy.hs  FindFunc.hs  FuncIrChecker.hs  FuncIrConst.hs  FuncIrDestroy.hs  FuncIrInline.hs  FuncIrRunConst.hs  FuncIrUnused.hs  IR.hs  MakeFuncIR.hs
compiler/stage4-referenceChecker/: Checker.hs
compiler/stage4-semanticCheck/: SemanticReferenceCheck.hs
compiler/stage5-emitCFile/: Builtin.hs  CAst.hs  CBuilder.hs  CGenerate.hs  COptimise.hs  CPretty.hs  Compile.hs  FindFunc.hs
compiler/stage5-generateC/: Builtin.hs  CBuilder.hs
compiler/test/: Test.hs  TestMain.hs  TestTypeConstraints.hs  TestTypeMatcher.hs
examples/: calculator.doo  chess.do  draughts.doo  graphicsTest.doo  grep.do  lambdaCalc.doo  langTest.doo  lang_test.doo  naughtsAndCrosses.doo  naughts_and_crosses.doo  naughtsandcrosses.doo  palindrome.bo  sfml_test.doo  tictactoe.bo  tictactoe.doo
examples/aoc/: day1.doo  day2.doo  day3.doo  day4.doo  day5.doo  day6.doo  day7.doo
include/: doodad.c  doodad.h  main.c
lang/: calculator.doo  calculator2.doo  calculator3.doo  lexer.bo  lexer.doo  lexerMain.doo  parser.bo  testLexer.doo
lang/calculator/: calculator.doo  calculator2.doo  calculator3.doo  calculator4.doo
lang/grammars/: doodad.bnf  doodad.table  doodad.table2  tableEater.doo  test.bnf
lang/lexer/: lexer.doo  lexerMain.doo
lang/lexer/test/: testLexer.doo
lang/parser/: bisonEater.doo  doodad.bison  doodad.bnf  doodad.output  doodad.table  parser.doo  parserTable.doo
lang/qbegen/: qbegen.doo
lang/test/: testLang.doo  testLexer.doo
lib/: io.bo
oldFiles/: CmpFuncs.hs  CmpMonad.hs  Resolver.hs  Table.hs  Value.hs
std/: arithemtic.doo  arithmetic.doo  array.doo  assert.bo  assert.doo  binaryTree.doo  bool.doo  boolean.doo  builtin.doo  char.doo  chars.bo  chars.doo  colours.doo  compare.doo  container.doo  convert.doo  destroy.doo  features.doo  floating.doo  for.doo  geom.doo  geometry.doo  integer.doo  io.bo  io.doo  len.doo  map.doo  maths.bo  maths.doo  maybe.doo  option.doo  ord.doo  print.doo  push.doo  rand.bo  rand.doo  range.doo  read.doo  rect.bo  rect.do  (+15 more)
std/lang/: lexer.doo
std/sfml/: sfml_test.doo  texture.doo  types.doo  window.doo
std/test/: stringsTest.doo  test.doo  testADT.doo  testBuiltin.doo  testChars.doo  testIo.doo  testMap.doo  testMaths.doo  testSparse.doo  testStrings.doo  testTable.doo  testTuple.doo
test/: Test.hs
