cabal-version:      2.4
name:               doodad
version:            2.4

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
author:             Tadeusz Josef Tomoszek
maintainer:         tadeuszjt@protonmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable doodad
    main-is:           Main.hs
    c-sources: compiler/stage0-parseAST/lexer.c
    extra-source-files: compiler/stage0-parseAST/lexer.h
    hs-source-dirs:
        compiler,
        compiler/stage0-parseAST,
        compiler/stage1-resolveSymbols,
        compiler/stage2-typeInference,
        compiler/stage2b-resolveFuncs,
        compiler/stage3-generateC
    default-language:  Haskell2010
    extra-libraries:   gc, m
    build-depends:
        base         >= 4.0.0.0,
        temporary,
        containers,
        mtl,
        array,
        directory,
        haskeline,
        filepath,
        exceptions,
        process
    build-tools:
        happy
    other-modules:
        AST,
        Args,
        Apply,
        Error,
        Flatten,
        Modules,
        Monad,
        Parser,
        SymTab,
        Type,
        Trace,
        Annotate,
        Collect,
        Unify,
        Resolve,
        Infer,
        Symbol,
        States,
        Lexer,
        Token,
        Resolve2,
        CBuilder,
        CPretty,
        CGenerate,
        CAst,
        Compile,
        COptimise
