cabal-version:      2.4
name:               doodad
version:            2.4

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
author:             Tadeusz Josef Tomoszek
maintainer:         tadeuszjt@protonmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable doodad
    main-is:           Main.hs
    c-sources:
        compiler/stage0-parseAST/lexer/lexer.c
        compiler/stage0-parseAST/lexer/io.c
        compiler/stage0-parseAST/lexer/assert.c
        compiler/stage0-parseAST/lexer/strings.c
        include/doodad.c
    include-dirs:
        include
    hs-source-dirs:
        compiler,
        compiler/stage0-parseAST,
        compiler/stage1-resolveSymbols,
        compiler/stage2-typeInference,
        compiler/stage3-generateC
    default-language:  Haskell2010
    extra-libraries:   m, gc
    build-depends:
        base,
        temporary,
        containers,
        mtl,
        array,
        directory,
        haskeline,
        filepath,
        exceptions,
        process
    build-tools:
        happy
    other-modules:
        AST,
        Args,
        Apply,
        Error,
        Flatten,
        Modules,
        Monad,
        Parser,
        SymTab,
        Type,
        Trace,
        Annotate,
        Collect,
        Unify,
        Resolve,
        Infer,
        Symbol,
        ASTResolved,
        Lexer,
        Token,
        CleanUp,
        CBuilder,
        CPretty,
        CGenerate,
        CAst,
        Compile,
        COptimise,
        Constraint,
        DeAnnotate,
        FunctionFinder
