cabal-version:      2.4
name:               doodad
version:            2.4

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
author:             Tadeusz Josef Tomoszek
maintainer:         tadeuszjt@protonmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable doodad
    main-is:           Main.hs

-- HOW TO PROFILE
-- install ghc-prof (sudo apt-get install ghc-prof)
-- enable the options below.
-- run as usual (cabal run doodad -- main2)
-- look at doodad.prof file
    ghc-options:
        -fno-warn-overlapping-patterns
        ---O2
        ---threaded
        ---prof
        ---fprof-auto
        --"-with-rtsopts=-N -p -s -h -i0.1"

    c-sources:
        compiler/stage0-parseAST/lexer/old_lexer.c
        --compiler/stage0-parseAST/lexer/io.c
        --compiler/stage0-parseAST/lexer/assert.c
        --compiler/stage0-parseAST/lexer/strings.c
        --include/doodad.c
    include-dirs:
        include
    hs-source-dirs:
        compiler,
        compiler/test,
        compiler/stage0-parseAST,
        compiler/stage1-resolveSymbols,
        compiler/stage2-typeInference,
        compiler/stage3-checker,
        compiler/stage4-generateC
    default-language:  Haskell2010
    build-depends:
        base,
        temporary,
        containers,
        mtl,
        array,
        directory,
        filepath,
        process
    build-tool-depends:
        happy:happy
    other-modules:
        AST,
        Args,
        Apply,
        Error,
        Modules,
        Monad,
        Parser,
        SymTab,
        Type,
        Annotate,
        Collect,
        Unify,
        Resolve,
        Infer,
        Symbol,
        ASTResolved,
        Lexer,
        Token,
        CleanUp,
        CBuilder,
        CPretty,
        CGenerate,
        CAst,
        Compile,
        COptimise,
        Constraint,
        FunctionFinder,
        ASTMapper,
        Checker

executable doodad-test
    main-is: TestMain.hs
    hs-source-dirs:
        compiler,
        compiler/test
    default-language:  Haskell2010
    build-depends:
        base,
        containers,
        mtl,
    other-modules:
        Symbol,
        Type
